# Beno-t-Catez-MLOps

./: Dockerfile  README.md  app.py  deployment.yaml  makefile  prometheus.py  pyproject.toml
